--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1526,14 +1526,14 @@ specifying the outline-path to a heading:
          "* %?"
          :file-name "daily/%<%Y-%m-%d>"
          :head "#+title: %<%Y-%m-%d>\n"
-         :olp ("Journal"))
+         :olp ("Lab notes"))
 
         ("j" "journal" entry
          #'org-roam-capture--get-point
          "* %?"
          :file-name "daily/%<%Y-%m-%d>"
          :head "#+title: %<%Y-%m-%d>\n"
-         :olp ("Lab notes"))))
+         :olp ("Journal"))))
 @end lisp
 
 The template @code{l} will put its notes under the heading ‘Lab notes’, and the
